
360) Deprecated --with-otp-only in favor of --without-passwd.

361) Add --with-mail-if-no-host to send mail if a user tries to run sudo on
     a host for which he/she is not authorized.

362) Most of sudo now runs as root instead of the invoking user to
     minimize the possibility of user control via signals or tracing.

363) Now Support CIDR-style netmasks (ie: 128.138.0.0/16).

364) In "sudo -l" mode, the type of the stored (expanded) alias was not
     stored with the contents.  This could lead to incorrect output
     if the sudoers file had different alias types with the same name.
     Normal parsing (ie: not in '-l' mode) is unaffected.

365) Now include strcasecmp() for those without it.

366) Most compile-time options are now changable at runtime via
     the 'Defaults' specification in the sudoers file.

367) Added a -L flag to printout all the possible 'Defaults' parameters.

368) It is now possible to escape "special" characters in usernames, hostnames,
     etc with a backslash.

369) Sudo will now accept a hostname/username/netgroupname that contains
     almost any character in it.  It seems many people want to use '.'
     and other non-alphanumerics in usernames.

370) Fixed the root_sudo option.  Sudo was always complaining that root
     was not allowed to run sudo if the root_sudo flag was turned off.

371) tgetpass() now uses a function to read up until the end of line.
     Fixes problems in a pipeline when a program sets the tty mode
     to be character at a time.

372) sudo now turns off core dumps via setrlimit (probably paranoia).

Sudo 1.6 released.

373) Better diagnostics on PAM failure.

374) Killed shell_noargs option, it cannot work since the command needs to
     be set before sudoers is parsed.

375) Fixed the following Defaults options: set_home, fqdn, syslog

376) When using select() in tgetpass(), do a separate select before
     each read to be sure we can timeout correctly.

377) Hopefully fix SecurID support.